fix: enhance UI layout and alignment in Agrivoltaic and Management components for better user experience

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,3 +3,9 @@ body {
     overflow-y: auto !important;
     overflow-x: hidden !important;
 }
+
+.agrivoltaic-align-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end !important;
+}
